<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    android:focusable="auto"
    android:nextFocusRight="@id/otp2"
    tools:context=".OtpActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_name"
        android:textColor="#363636"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/enter_otp"
        android:textColor="#363636"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp3"
        android:autofillHints="@android:string/untitled"
        android:hint="@string/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/otp_box"
        android:inputType="phone"
        android:nextFocusRight="@id/otp4"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/otp4"
        app:layout_constraintStart_toEndOf="@+id/otp1"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/otp2"
        android:layout_width="wrap_content"
        android:hint="@string/two"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/otp_box"
        android:inputType="phone"
        android:nextFocusRight="@id/otp3"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/otp3"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/otp1"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="@android:string/untitled" />

    <EditText
        android:id="@+id/otp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/otp_box"
        android:inputType="phone"
        android:maxLength="1"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="@android:string/untitled"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:hint="@string/one"/>

    <EditText
        android:id="@+id/otp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/otp_box"
        android:hint="@string/four"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="@android:string/untitled"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/otp1"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/continue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:background="@drawable/button2_bg"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp2" />

</androidx.constraintlayout.widget.ConstraintLayout>